2003-08-5  Alif Wahid  <awah005@users.sourceforge.net>

	* gtk/gtkgl/apputils.py: Added timeout callback facility
	for frame update of the GLScene, GLArea and GLApplication
	classes. As requested by Naofumi these new methods/attributes are,
		GLScene.toggle_timeout()
		GLScene.timeout(width, height)

		GLArea.default_timeout_interval
		GLArea.enable_timeout(interval)
		GLArea.timeout_add()
		GLArea.timeout_remove()
		GLArea.toggle_timeout()

		GLApplication.enable_timeout(interval)

	* examples/button.py (BouncingTorus.timeout):
	* examples/NeHe6Multi.py (NeHe6Multi.timeout):
	Animation is performed using timeout functions now.

	* examples/font.py (Font.timeout):
	* examples/MoveLight.py (MoveLight.timeout):
	* examples/scribble.py (Scribble.timeout):
	* examples/Shapes.py (Shapes.timeout):
	* examples/SimpleScene.py (SimpleScene.timeout):
	* example/teapot2.py (Teapot.timeout):
	All the corresponding implementations of GLScene now
	also implement the 'timeout' method.

2003-08-4  Alif Wahid  <awah005@users.sourceforge.net>

	* examples/Makefile.am (scribble.py):
	* examples/scribble-gl.py:
	* examples/scribble.py: The previous example scribble-gl.py
	has been split into scribble.py and scribble-gl.py to separate
	out the OpenGL parts from Gtk parts completely. Thus scribble.py
	is fully modular and can be used in other programs now. The
	Scribble class resides in scribble.py while the ScribbleGLDemo
	class resides in scribble-gl.py

	* AUTHORS (scribbling-worms.py)
	* examples/Makefile.am (scribbling-worms.py):
	* examples/scribbling-worms.py: New example program to
	test multi-threading with PyGtkGLExt. Uses the scribble.py
	module to draw scribble strokes from multiple threads in
	an autonomous manner and lets the user scribble at the
	same time too.

2003-08-3  Alif Wahid  <awah005@users.sourceforge.net>

	* configure.in (pygtk_required_version):
	* setup.py (PYGTK_REQUIRED_VERSION): PyGtkGLExt now depends on
	release 1.99.17 of the PyGtk library or above.
